...
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <!-- Button to create new drawing -->
        <Button
            android:id="@+id/createNewDrawing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create New Drawing"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/white"
            android:elevation="4dp"/>
...
                    android:layout_marginEnd="16dp"
                    android:scaleType="centerCrop"
                    android:elevation="4dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/recentDrawing1Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:text="Drawing 1"
...
